# aurora

./: CMakeLists.txt  README.md  config.doxygen
docs/: README.md  index.html
docs/html/: _bl_osc_8h.html  _bl_osc_8h__incl.map  _bl_osc_8h__incl.md5  _bl_osc_8h_source.html  _bl_osc_t_8h.html  _bl_osc_t_8h__incl.map  _bl_osc_t_8h__incl.md5  _bl_osc_t_8h_source.html  _conv_8h.html  _conv_8h__incl.map  _conv_8h__incl.md5  _conv_8h_source.html  _del_8h.html  _del_8h__incl.map  _del_8h__incl.md5  _del_8h_source.html  _del_t_8h.html  _del_t_8h__incl.map  _del_t_8h__incl.md5  _del_t_8h_source.html  _env2_8h.html  _env2_8h__incl.map  _env2_8h__incl.md5  _env2_8h_source.html  _env_8h.html  _env_8h__incl.map  _env_8h__incl.md5  _env_8h_source.html  _eq_8h.html  _eq_8h__incl.map  _eq_8h__incl.md5  _eq_8h_source.html  _f_f_t_8h.html  _f_f_t_8h__dep__incl.map  _f_f_t_8h__dep__incl.md5  _f_f_t_8h__incl.map  _f_f_t_8h__incl.md5  _f_f_t_8h_source.html  _fil_8h.html  _fil_8h__incl.map  (+153 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  (+34 more)
docs/latex/: _bl_osc_8h.tex  _bl_osc_8h__incl.md5  _bl_osc_t_8h.tex  _bl_osc_t_8h__incl.md5  _conv_8h.tex  _conv_8h__incl.md5  _del_8h.tex  _del_8h__incl.md5  _del_t_8h.tex  _del_t_8h__incl.md5  _env2_8h.tex  _env2_8h__incl.md5  _env_8h.tex  _env_8h__incl.md5  _eq_8h.tex  _eq_8h__incl.md5  _f_f_t_8h.tex  _f_f_t_8h__dep__incl.md5  _f_f_t_8h__incl.md5  _fil_8h.tex  _fil_8h__incl.md5  _four_pole_8h.tex  _four_pole_8h__incl.md5  _func_8h.tex  _func_8h__incl.md5  _func_t_8h.tex  _func_t_8h__incl.md5  _one_pole_8h.tex  _one_pole_8h__incl.md5  _osc_8h.tex  _osc_8h__dep__incl.md5  _osc_8h__incl.md5  _osc_t_8h.tex  _osc_t_8h__dep__incl.md5  _osc_t_8h__incl.md5  _snd_base_8h.tex  _snd_base_8h__dep__incl.md5  _snd_base_8h__incl.md5  _two_pole_8h.tex  _two_pole_8h__incl.md5  (+56 more)
docs/man/man3/: Aurora.3  Aurora_BinOp.3  Aurora_BlOsc.3  Aurora_Buff.3  Aurora_Conv.3  Aurora_Del.3  Aurora_Env.3  Aurora_Eq.3  Aurora_FFT.3  Aurora_Fil.3  Aurora_FourPole.3  Aurora_Func.3  Aurora_IR.3  Aurora_Mix.3  Aurora_OnePole.3  Aurora_Osc.3  Aurora_SndBase.3  Aurora_TableSet.3  Aurora_TwoPole.3  BlOsc.h.3  BlOscT.h.3  Conv.h.3  Del.h.3  DelT.h.3  Env.h.3  Env2.h.3  Eq.h.3  FFT.h.3  Fil.h.3  FourPole.h.3  Func.h.3  FuncT.h.3  OnePole.h.3  Osc.h.3  OscT.h.3  README.md.3  SndBase.h.3  TwoPole.h.3  _Users_victor_src_Aurora_include_.3  include_README.md.3
examples/: README.md  buffer.cpp  chorus.cpp  custom.cpp  delay.cpp  drive.cpp  equaliser.cpp  filter.cpp  flanger.cpp  flute.h  follow.cpp  freqshift.cpp  freverb.cpp  grain.cpp  grain.h  grproc.cpp  grsynth.cpp  karplus.cpp  lopass.cpp  lpwave.cpp  noise.cpp  objvec.cpp  operatorpm.cpp  oscil.cpp  pwm.cpp  resonator.cpp  reverb.cpp  stackedfm.cpp  stackedpm.cpp  svfdrive.cpp  towav.c  tvconv.cpp  wave.cpp
include/: BlOsc.h  BlOscT.h  Conv.h  Del.h  DelT.h  Env.h  Env2.h  Eq.h  FFT.h  Fil.h  FourPole.h  Func.h  Noise.h  OnePole.h  Osc.h  OscT.h  Quad.h  README.md  SndBase.h  SpecBase.h  SpecPitch.h  SpecPlay.h  SpecShift.h  SpecStream.h  Tonegen.h  Tonewheel.h  TwoPole.h
utilities/: README.md  wtgen.c
